@@ -53,3 +53,6 @@ eboxlogs_sliced_backup_archive_at_once = 3
 # Wether to allow restore with unarchived slices (you will lose data)
 # Allowed values = [yes|no]
 eboxlogs_force_not_archived_restore = no
+
+# Wether to allow DB sliced restore without schema file
+eboxlogs_force_not_schema_sliced_restore = no
