@@ -4,6 +4,7 @@ HEAD
 	+ Added 'files included' domain and restore all fiels options to
 	  restore-tool
 	+ Using 'cat' command instead of 'tail' to retrieve backup metadata
+	+ Clean temporal directory before doing logs restore
 	+ Bugfix: values from configuration file are checked to assure
 	that at least making backup is tried once
 2.0.10
